assets/css/shadow.css
/*------------------------------------------------------------------
[Fonts]
*/

@font-face {
  font-family: "Open Sans";
  font-weight: 300;
  src: url("../fonts/OpenSans/OpenSans-Light.ttf");
}

@font-face {
  font-family: "Open Sans";
  font-weight: 300;
  src: url("../fonts/OpenSans/OpenSans-LightItalic.ttf");
  font-style: italic
}

@font-face {
  font-family: "Open Sans";
  font-weight: 400;
  src: url("../fonts/OpenSans/OpenSans-Regular.ttf");
}

@font-face {
  font-family: "Open Sans";
  font-weight: 400;
  src: url("../fonts/OpenSans/OpenSans-Italic.ttf");
  font-style: italic
}

@font-face {
  font-family: "Open Sans";
  font-weight: 700;
  src: url("../fonts/OpenSans/OpenSans-Bold.ttf");
}

@font-face {
  font-family: "Open Sans";
  font-weight: 700;
  src: url("../fonts/OpenSans/OpenSans-BoldItalic.ttf");
  font-style: italic;
}

/*------------------------------------------------------------------
[FA]
*/

.fa.green {
  color: rgb(73, 151, 73);
}
.fa.red {
  color: #E3223C;
}
.fa.orange {
  color: #f39347;
}

/*------------------------------------------------------------------
[Page]
*/

.page-content-wrapper {
  background:#F0F1F3;
}

.panel {
  border: 0px solid transparent;
}

.page-sidebar .sidebar-menu .menu-items > li ul.sub-menu > li:hover > .icon-thumbnail {
  color: #E3223C;
}

.panel.panel-default {
  border: 1px solid rgba(0, 0, 0, 0.07);
  background: #fff;
}


/*------------------------------------------------------------------
[Nav]
*/

.nav-sub-menu {
  background-color: #ffffff;
  border:none;
  -webkit-border-radius: 0 !important;
  -moz-border-radius: 0 !important;
  border-radius: 0 !important;
}


/*------------------------------------------------------------------
[Tooltips]
*/

#tooltip
{
  font-size:0.8em;
  text-align: center;
  color: #fff;
  background: #131218;
  position: absolute;
  z-index: 99999999;
  padding: 10px;
  line-height:15px;
  border-radius: 4px;
}

#tooltip:after /* Triangle decoration */
{
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #131218;
  content: '';
  position: absolute;
  left: 50%;
  bottom: -10px;
  margin-left: -10px;
}

#tooltip.top:after
{
  border-top-color: transparent;
  border-bottom: 10px solid #131218;
  top: -20px;
  bottom: auto;
}

#tooltip.left:after
{
  left: 10px;
  margin: 0;
}

#tooltip.right:after
{
  right: 10px;
  left: auto;
  margin: 0;
}

/*------------------------------------------------------------------
[Overview]
*/

.center-div {
  text-align: center;
}

.cents {
  font-size:15px;
}

.light-red {
  color:#E3223C;
}


.syncing {
  color:#E3223C;
}

.transaction-overview {
  text-decoration: none;
  color: rgb(170, 170, 170);
  display: block;
  padding:20px;
  border-bottom: 1px solid #F0F1F3;
  font-size:13px;
}

.transaction-overview span {
  color: #131218;

}

.transaction-overview span.date {
  color: #b9bdbe;
}

.overview_date {
  letter-spacing: 1px;
}

#status {
  margin-top:5px;
  padding-top: 3px;
}

/*------------------------------------------------------------------
[Alert network]
*/

#network-alert {
display:block;
}

.network-alerts-icon {
  margin-right:5px;
}

/*------------------------------------------------------------------
[Send]
*/

.warning {
  font-size:0.8em;
  color: #F51E3E;
  padding:5px;
}
/*------------------------------------------------------------------
[Tables]
*/

table.dataTable thead th, table.dataTable thead td {
  padding: 10px 18px;
  border-bottom: 1px solid red;
}

td {
  max-width: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

table {
  width: 100%;
}

.table {
  color:#898989;
}

/*------------------------------------------------------------------
[Options & forms]
*/

.label, .label:empty {
  display: block;
}

input, optgroup, select, textarea {
  background-image: none;
  border-radius: 2px;
  border: none;
  padding: 3px 9px;
  height: 34px;
  background:transparant;
  border: 1px solid #F0F1F3;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  font-size:13px;
  color: #000;
}

button {
  background-image: none;
  border-radius: 2px;
  border: none;
  background:transparant;
  border: 1px solid #F0F1F3;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  font-size:13px;
  color: #000;
}

.newval {
  background:#fff;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  width: 99%;
}

::-webkit-input-placeholder,  /* Safari, Chrome and Opera */
:placeholder-shown { /* Standard one last! */
  color: #626262;
}

.padding-right-forms {
  margin-right:25px;
}

.select-drop-down {
  width: 145px;
  font-size: 13px;
  border:none;
  height: 35px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: url(../icons/chevron.png) #F0F1F3 95% no-repeat;
  border: 1px solid rgba(0, 0, 0, 0.07);
}

.select-drop-down-small {
  width: 50px;
  font-size: 13px;
  border:none;
  height: 35px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: url(../icons/chevron.png) #F0F1F3 95% no-repeat;
  border: 1px solid rgba(0, 0, 0, 0.07);
}

.form-control-options-page {
  background-color: #F0F1F3;
  background-image: none;
  border: 1px solid rgba(0, 0, 0, 0.07);
  font-family: Arial, sans-serif;
  -webkit-appearance: none;
  color: #2c2c2c;
  outline: 0;
  height: 35px;
  line-height: normal;
  font-size: 14px;
  font-weight: normal;
  min-height: 35px;
  -webkit-transition: all 0.12s ease;
  transition: all 0.12s ease;
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-transition: background 0.2s linear 0s;
  transition: background 0.2s linear 0s;
}


/*------------------------------------------------------------------
[Modals]
*/

#qrcode-modal {
  display:none;
}
/* ... */

